Closed Bug 969764 Opened 11 years ago Closed 11 years ago

[jsdbg2] owning element attribute name not propagated through off-thread compilations

Categories

(Core :: JavaScript Engine, defect)

defect
Not set
normal

Tracking

()

RESOLVED FIXED
mozilla30

People

(Reporter: jimb, Assigned: jimb)

Details

Attachments

(1 file)

The name of the element attribute to which a script belongs, set with CompileOptions::setElementAttributeName, is supposed to be able to be retrieved from Debugger.Source instances via the 'elementAttributeName' accessor. However, if a thread is compiled off the main thread, the attribute name information is dropped. The attached patch includes a test case and a fix.
Attachment #8372748 - Flags: review?(bhackett1024)
Attachment #8372748 - Flags: review?(bhackett1024) → review+
Flags: in-testsuite+
Target Milestone: --- → mozilla30
Assignee: nobody → jimb
Status: NEW → RESOLVED
Closed: 11 years ago
Resolution: --- → FIXED
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: