Bug 969764: Properly carry the source's element attribute name through off-thread compilations. r=bhackett